content/terraform-enterprise/1.0.x/docs/enterprise/integrations/aws-service-catalog/index.mdx
---
page_title: Terraform Enterprise for AWS Service Catalog overview
description: >-
  Terraform Enterprise for AWS Service Catalog lets you provision infrastructure
  with HCP Terraform inside AWS Service Catalog.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-08-11T21:14:21-07:00
# END AUTO GENERATED METADATA
---

# HCP Terraform for AWS Service Catalog overview

This integration allows administrators to curate a portfolio of pre-approved Terraform configurations on AWS Service Catalog. This enables end users like engineers, database administrators, and data scientists to deploy these Terraform configurations with a single action from the AWS interface. By combining HCP Terraform with AWS Service Catalog, we’re combining a self-service interface that many customers are familiar with, AWS Service Catalog, with the existing workflows and policy guardrails of HCP Terraform.

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/aws-service-catalog.mdx'

<!-- END: TFC:only name:pnp-callout -->

## Installation & Configuration

To start using this integration, you'll need to install the [AWS Service Catalog Engine for Terraform Cloud](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc) provided by HashiCorp on GitHub by following the [setup instructions](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc#getting-started) provided in the README. If you run into any setup troubles along the way, the README also includes [troubleshooting steps](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc#troubleshooting) that should help resolve common issues that you may encounter.

With the engine installed, the necessary code and infrastructure to integrate the HCP Terraform engine with AWS Service Catalog will automatically be configured. The setup can be completed in just a few minutes, and it only needs to be done once. Once the setup is complete, you can immediately start using AWS Service Catalog to develop and manage AWS Service Catalog products, and make them accessible to your end users across all your accounts.

## Usage

You can access this new feature through the AWS Service Catalog console in any AWS regions where AWS Service Catalog is supported and follow the AWS Service Catalog Administrator Guide to [create your first Terraform product](https://docs.aws.amazon.com/servicecatalog/latest/adminguide/getstarted-product-Terraform.html).
