content/terraform-enterprise/1.1.x/docs/enterprise/integrations/aws-service-catalog/index.mdx
---
page_title: Terraform Enterprise for AWS Service Catalog overview
description: >-
  Terraform Enterprise for AWS Service Catalog lets you provision infrastructure
  with HCP Terraform inside AWS Service Catalog.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-15T15:59:29Z
last_modified: 2025-11-04T10:48:52-08:00
# END AUTO GENERATED METADATA
---

# HCP Terraform for AWS Service Catalog overview

This integration allows administrators to curate a portfolio of pre-approved Terraform configurations on AWS Service Catalog. This enables end users like engineers, database administrators, and data scientists to deploy these Terraform configurations with a single action from the AWS interface.

By combining HCP Terraform with AWS Service Catalog, we’re combining a self-service interface that many customers are familiar with, AWS Service Catalog, with the existing workflows and policy guardrails of HCP Terraform.

<!-- BEGIN: TFC:only name:pnp-callout -->

@include 'tfc-package-callouts/aws-service-catalog.mdx'

<!-- END: TFC:only name:pnp-callout -->

## Installation and configuration

<!-- BEGIN: TFC:only name:hcp-eu -->

<Note>

To use the AWS service catalog integration with an HCP Europe organization, set the example [`tfc_hostname` variable](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc/blob/main/variables.tf#L15-L19) to `app.eu.terraform.io` in your configuration.

</Note>

<!-- END: TFC:only name:hcp-eu -->

To start using this integration, you'll need to install the [AWS Service Catalog Engine for Terraform Cloud](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc) provided by HashiCorp on GitHub by following the [setup instructions](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc#getting-started) provided in the README. If you run into any setup troubles along the way, the README also includes [troubleshooting steps](https://github.com/hashicorp/aws-service-catalog-engine-for-tfc#troubleshooting) that should help resolve common issues that you may encounter.

With the engine installed, the necessary code and infrastructure to integrate the HCP Terraform engine with AWS Service Catalog will automatically be configured. The setup can be completed in just a few minutes, and it only needs to be done once. Once the setup is complete, you can immediately start using AWS Service Catalog to develop and manage AWS Service Catalog products, and make them accessible to your end users across all your accounts.

## Usage

You can access this new feature through the AWS Service Catalog console in any AWS regions where AWS Service Catalog is supported and follow the AWS Service Catalog Administrator Guide to [create your first Terraform product](https://docs.aws.amazon.com/servicecatalog/latest/adminguide/getstarted-product-Terraform.html).
